--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "att-gora-lista",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/todo-app",
+  "homepage": "https://github.com/Zerhar/todo-app",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
